# daeclipse-cli

./: README.md  cli.py  pyproject.toml
daeclipse_cli/: cli.py
daeclipse_cli/commands/: __init__.py
test/: test_daeclipse_cli.py
